# sipetoBot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListx.txt  LICENSE.txt  Makefile  README.md  cmake_install.cmake  design.md
lander/: index.html
src/: bobot.cpp  bobot.h  header.h  http_server.cpp  http_server.h  instagram.cpp  main.cpp  media_downloader.cpp  simple_http_server.cpp  simple_http_server.h  sipeto.cpp  sipeto.h  tiktok.cpp  twitter.cpp
src/include/: header.h  instagram.h  media_downloader.h  simple_http_server.h  sipeto.h  td_header.h  tiktok.h  twitter.h
