CMAKE_MINIMUM_REQUIRED(VERSION 3.26.1)
PROJECT(bobot VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)

# Find packages
FIND_PACKAGE(spdlog REQUIRED)
FIND_PACKAGE(Boost REQUIRED)

# FIND_LIBRARY(FMT_LIB NAMES fmt fmtd)

OPTION(CMAKE_VERBOSE_MAKEFILE "Verbose Makefile" ON)
OPTION(BUILD_TESTS "Build tests" ON)

ADD_COMPILE_DEFINITIONS(ENGINE_VERSION="${PROJECT_VERSION}")

ADD_EXECUTABLE("${PROJECT_NAME}"
  src/main.cpp
)

TARGET_LINK_LIBRARIES("${PROJECT_NAME}" PRIVATE
  ${BOOST_LIBRARIES}
  ${SPDLOG_LIBRARIES}
)

# IF (BUILD_TESTS)
#   MESSAGE(STATUS "Building tests ...")
#   ENABLE_TESTING()
#   ADD_SUBDIRECTORY(test)
#   ADD_TEST(NAME ${PROJECT_NAME}_tests COMMAND test/${PROJECT_NAME}_test)
# ENDIF (BUILD_TESTS)
